[package]
name = "rust-parser"
version = "0.1.4"
authors = ["dan_0xe"]
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
path="src/lib.rs"
name="jparse"

[[bin]]
path="src/main.rs"
name="json_to_debug"

[dependencies]
gobble="0.6.3"
